2016-05-12  Jean-Louis Martineau <JMartineau@carbonite.com>
	* installcheck/Installcheck/Rest.pm (cleanup_for_amdump): Clean
	  $body->[0]{report}{head}->{hostname}
	* installcheck/pp-scripts.pl: hostname is undef

2016-05-11  Jean-Louis Martineau <JMartineau@carbonite.com>
	* application-src/Makefile.am (applicationexec_SCRIPTS_SHELL): Add
	  script-fail
	* application-src/script-fail.sh: New script that always fail (for
	  testing)
	* installcheck/Installcheck/Rest.pm (cleanup_for_amdump): New function
	  to cleanup result for a report
	* installcheck/pp-scripts.pl: Check failing scripts

2016-05-11  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/holding.c: Accept level up to DUMP_LEVELS

2016-05-11  Jean-Louis Martineau <JMartineau@carbonite.com>
	* client-src/sendbackup.c: Fix delay in waiting for application

2016-05-11  Jean-Louis Martineau <JMartineau@carbonite.com>
	* client-src/client_util.c: Improve parsing of estimate scripts
	* client-src/sendsize.c: Fail estimate if script fail
	* server-src/planner.c: continue parsing after ERROR line

2016-05-10  Jean-Louis Martineau <JMartineau@carbonite.com>
	* installcheck/amgtar.pl: Fix path

2016-05-10  Jean-Louis Martineau <JMartineau@carbonite.com>
	* installcheck/amgtar.pl: Fix path
	* installcheck/amstar.pl: Add a STAR-TARDUMP property

2016-05-10  Jean-Louis Martineau <JMartineau@carbonite.com>
	* application-src/ambsdtar.c, application-src/amgtar.c
	  application-src/amstar.c: Define a AM_ERROR_RE
	* client-src/client_util.c (build_re_table): Keep DMP_ERROR
	* config/amanda/userid.m4: AC_SUBST(SINGLE_USERID)
	* perl/Amanda/Constants.pm.in.src: Add $SINGLE_USERID
	* installcheck/Installcheck/Application.pm: Parse negative size
	* installcheck/ambsdtar.pl, installcheck/amgtar.pl,
	  installcheck/amstar.pl: Resultdifer if $SINGLE_USERID is set

2016-05-09  Jean-Louis Martineau <JMartineau@carbonite.com>
	* application-src/ambsdtar.c: selfcheck output is JSON, improve error
	  reporting